kubernetes/base/apps/home-automation/esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: home-automation
spec:
  type: ClusterIP
  selector:
    app: esphome
  ports:
    - name: http
      port: 6052
      targetPort: 6052
      protocol: TCP
