kubernetes/base/apps/home-automation/esphome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  namespace: home-automation
  annotations:
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: esphome.internal
    gethomepage.dev/description: Sensors Tooling
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Home
    gethomepage.dev/icon: esphome.png
    gethomepage.dev/name: ESPHome
    gethomepage.dev/pod-selector: "app=esphome"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: esphome.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: esphome
                port:
                  number: 6052
  tls:
    - hosts:
        - "esphome.internal"
      secretName: esphome-ing-cert
